--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,15 @@ body {
   background: #ffffff;
   font-family: Arial, sans-serif;
 }
-h1 {
+h1,
+img {
   padding: 10px;
-  background: #e2dbbe;
+  background: #ffffff;
 }
-
+#page_header > img,
+#page_header > h2 {
+  display: inline-block;
+}
 /*---------------------------*/
 /* Read mats */
 /*---------------------------*/
@@ -57,6 +61,7 @@ h1 {
   padding: 10px;
   border: 1px solid #4cb4e7;
   color: #a3a380;
+  word-wrap: break-word;
 }
 
 /* Add mat Module */
